# metabuilder-small

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .npmrc  AGENTS.md  CLAUDE.md  Jenkinsfile  QUICK_REFERENCE.md  README.md  ROADMAP.md  package.json  take-screenshot.js
dbal/production/: .clang-tidy  .dockerignore  .env.example  CLEAN_ARCHITECTURE.md  CMakeLists.txt  test_env_config.sh  verify_build.sh
dbal/production/_build/: .ninja_deps  .ninja_log  CTestTestfile.cmake  build.ninja  coverage.info  coverage_filtered.info  integration_results.xml  test_results.xml
dbal/production/_build/coverage_html/: cmd_line
dbal/production/build-config/: Dockerfile  conanfile.py  conanfile.tests.py
dbal/production/docs/: CVE_ANALYSIS.md  CVE_COMPARISON_SUMMARY.md  ENTITY_SCHEMA_LOADER.md  IMPLEMENTATION_STATUS.md  PHASE3_DAEMON.md  README.Docker.md  README.Linting.md  README.md  SECURITY_TESTING.md  TESTING_AND_ANALYSIS_SETUP.md
dbal/production/include/dbal/: blob_storage.hpp  capabilities.hpp  client.hpp  errors.hpp  logger.hpp  result.hpp  types.hpp
dbal/production/include/workflow/: wf_context.hpp  wf_step.hpp
dbal/production/lint-config/: .clang-format  .clang-tidy  lint.sh
dbal/production/src/: capabilities_detect.hpp  capabilities_supports.hpp  client_entity_ops.cpp  client_init.cpp  client_misc_ops.cpp  client_page_component_ops.cpp  client_user_ops.cpp  errors.cpp
dbal/production/src/adapters/: schema_loader.hpp  sql_generator.hpp  sql_template_generator.hpp  sql_templates.hpp
dbal/production/src/auth/: auth_config.cpp  auth_config.hpp
dbal/production/src/blob/: blob_storage_factory.hpp  filesystem_storage.hpp  memory_storage.hpp  s3_storage.hpp
dbal/production/src/config/: ARCHITECTURE.md  README.md  config_loader.hpp  config_validator.hpp  default_config.hpp  env_config.hpp  env_parser.hpp  test_config.cpp
dbal/production/src/core/: adapter_factory.cpp  client_config.cpp  compensating_transaction.cpp  connection_validator.cpp  entity_loader.cpp  error_formatter.cpp  error_logger.cpp  error_translator.cpp  metadata_cache.cpp  operation_executor.cpp  prisma_datasource_generator.cpp  prisma_datasource_generator.hpp  prisma_enum_generator.cpp  prisma_enum_generator.hpp  prisma_file_writer.cpp  prisma_file_writer.hpp  prisma_generator.cpp  prisma_generator.hpp  prisma_model_generator.cpp  prisma_model_generator.hpp  prisma_relation_generator.cpp  prisma_relation_generator.hpp
dbal/production/src/daemon/: bulk_handler.cpp  bulk_handler.hpp  crud_handler.cpp  crud_handler.hpp  daemon_config.cpp  daemon_config.hpp  daemon_init.cpp  daemon_init.hpp  json_convert.hpp  list_handler.cpp  list_handler.hpp  main.cpp  query_handler.cpp  query_handler.hpp  (+14 more)
dbal/production/txt/: TABLE_CREATION_TODO_2026-02-05.txt
frontends/cli/: CMakeLists.txt  CURL-release-armv8-data.cmake  CURLConfig.cmake  FindCURL.cmake  README.md  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-release-armv8.sh  conandeps_legacy.cmake  conanfile.txt  conanrun.sh  conanrunenv-release-armv8.sh  cpr-Target-release.cmake  cpr-config.cmake  cpr-release-armv8-data.cmake  deactivate_conanbuild.sh  deactivate_conanrun.sh  lua-config.cmake  lua-release-armv8-data.cmake  module-CURL-Target-release.cmake  module-CURL-release-armv8-data.cmake  module-ZLIB-release-armv8-data.cmake  nlohmann_json-release-armv8-data.cmake  sol2-config.cmake  sol2-release-armv8-data.cmake
frontends/cli/src/: main.cpp
frontends/qt6/: CMakeLists.txt  FrontPage.qml  MaterialLanding.qml  MaterialMapping.md  ModPlayerPanel.qml  PackageManager.qml  README.md  Storybook.qml  conanfile.txt  main.cpp
frontends/qt6/src/: DBALClient.cpp  DBALClient.h  ModPlayer.cpp  ModPlayer.h  PackageRegistry.cpp  PackageRegistry.h
gameengine/: .clang-tidy  .gitignore  CMakeLists.txt  CMakeLists.txt.jinja2  CMakeUserPresets.json  Makefile  build-codeql.sh  build.sh  cmake_config.json  conanfile.py  generate_cmake.py  test_exit_step.cpp
gameengine/.github/workflows/: Dockerfile  mirror.yml  package-release.yml  publish-container.yml  release.yml  upload-build-artifact.yml
gameengine/cmake/: compiler_config.cmake.jinja2  dependencies.cmake.jinja2  options.cmake.jinja2  source_groups.cmake.jinja2
gameengine/docs/: UE5_Lighting_System_Documentation.md  UE5_Reflections_And_GI_Documentation.md  UE5_Rendering_Documentation.md  UE5_Shadow_Rendering_Documentation.md  UE5_Sky_And_Atmosphere_Documentation.md
gameengine/examples/: pixel_verification_example.cpp
gameengine/examples/experiment/: .gitignore  ACHIEVEMENT_SUMMARY.md  CMakeLists.txt  DEBUGGER_ECOSYSTEM.md  DEBUGGING_INDEX.md  GDB_DEBUGGER_GUIDE.md  INDEX.md  README.md  README_WORKFLOW_MAPPING.md  SPY_CLIENT_QUICK_START.md  SPY_INTEGRATION_SUMMARY.md  SPY_THREAD_GUIDE.md  WORKFLOW_CONTROL_GUIDE.md  WORKFLOW_CUBES_GUIDE.md  WORKFLOW_SPY_INTEGRATION.md  debug_test  debug_test_dbg  debugger_interface.py  gdb_debugger.py  metal.entitlements  run_cubes.sh  spy_client.py  spy_thread_debugger.cpp  spy_thread_demo.cpp  test_spy_thread.sh  test_spy_workflow_integration.sh  workflow_cubes_advanced.json
gameengine/profiles/: vita
gameengine/python/: dev_commands.py
gameengine/src/: main.cpp
gameengine/src/app/: service_based_app.cpp  service_based_app.hpp  service_based_app_register.cpp  service_based_app_register_graphics.cpp  service_based_app_register_media.cpp  service_based_app_run.cpp
gameengine/src/core/: pixel_data_csv.cpp  pixel_data_csv.hpp  vertex.hpp
gameengine/src/di/: lifecycle.hpp  service_registry.cpp  service_registry.hpp
gameengine/src/events/: event_bus.cpp  event_bus.hpp  event_listener.hpp  event_types.hpp  i_event_bus.hpp
python/: README.md  __init__.py  metabuilder.py  migrate-to-sqlite.py  pyproject.toml  summary.py
python/fakemui/: __init__.py  atoms.py  base.py  data_display.py  demo.py  feedback.py  inputs.py  lab.py  layout.py  navigation.py  stylesheet.py  surfaces.py  theming.py  utils.py  x.py
services/media_daemon/build-config/: CMakeLists.txt  conanfile.txt
workflow/plugins/rust/: Cargo.toml  README.md  package.json  plugin.rs
(+6337 files in other folders)
